added styling for icons

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inspire-tree-dom-2",
+  "name": "inspire-tree-dom-custom-class",
   "version": "0.1.0",
   "description": "Forked origin DOM rendering engine for Inspire Tree",
   "repository": "https://github.com/helion3/inspire-tree-dom",
